Improve cookie warning style

--- a/src/main/resources/group-randomizer.css
+++ b/src/main/resources/group-randomizer.css
@@ -1,6 +1,9 @@
+#ck_container_cookie {
+	background-color: #000000aa;
+}
 
-a.gr-action-link {
-    /*color: green;*/
+#ck_container_cookie + div {
+	filter: blur(5px);
 }
 
 .gr-action-link-container a.gr-action-link {
