--- a/src/main/resources/group-randomizer.css
+++ b/src/main/resources/group-randomizer.css
@@ -19,8 +19,8 @@ a.gr-action-link:hover {
     opacity: 1;
 }
 
-.gr-full-width {
-    width: 100%;
+.gr-bg-light-grey {
+    background-color: #eeeeee;
 }
 
 .gr-existing-members-hide {
@@ -30,4 +30,8 @@ a.gr-action-link:hover {
 .gr-existing-members-hide + form {
 	border-top-left-radius: inherit;
 	border-top-right-radius: inherit;
+}
+
+.gr-full-width {
+    width: 100%;
 }
