Fix background color of selected prefix, separator and postfix entries

--- a/src/main/resources/group-randomizer.css
+++ b/src/main/resources/group-randomizer.css
@@ -21,6 +21,7 @@ a.gr-action-link:hover {
 
 .gr-bg-light-grey {
     background-color: #eeeeee;
+    color: #000000;
 }
 
 .gr-existing-members-hide {
